--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>bioMedical</artifactId>
 	<version>0.0.1-RELEASE</version>
 	<name>bioMedical</name>
-	<description>Demo project for Summer Boot</description>
+	<description>Demo project for Fall Boot</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
